--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
         <div class="site-footer" role="contentinfo">
             <div class="copyright left mobile-block">
                     © 2016
-                    <span title="overtrue.me">silen.com.cn</span>
+                    <span title="silen.com.cn">silen.com.cn</span>
                     <a href="javascript:window.scrollTo(0,0)" class="right mobile-visible">TOP</a>
             </div>
 
