--- a/_layouts/api.html
+++ b/_layouts/api.html
@@ -27,7 +27,7 @@ layout: default
             <ul class="boxed-group-inner mini-repo-list">
                 {% for repo in site.api_user %}
                 <li class="public source ">
-                    <a href="{{ repo.href }}" target="_blank" title="{{ repo.label }}" class="mini-repo-list-item css-truncate">
+                    <a href="{{ repo.href }}" title="{{ repo.label }}" class="mini-repo-list-item css-truncate">
                         <span class="repo-icon octicon octicon-repo"></span>
                 <span class="repo-and-owner css-truncate-target">
                     {{ repo.label }}
