--- a/_includes/ihuangcheng.html
+++ b/_includes/ihuangcheng.html
@@ -1,10 +1,12 @@
 <a name="login"></a>
 
+## 用户注册
+
 ### 登录
 ---
-/index.php?m=apic=user&a=login
+/index.php?m=api&c=user&a=login
 
-http请求方式: POS
+http请求方式: POST
 
 | 参数        | 是否必填        |  说明 |
 | ------------- |:-------------|:-------------|
@@ -46,9 +48,9 @@ http请求方式: POS
 
 ### 注册
 ---
-/index.php?m=apic=user&a=register
+/index.php?m=api&c=user&a=register
 
-http请求方式: POS
+http请求方式: POST
 
 | 参数        | 是否必填        |  说明 |
 | ------------- |:-------------|:-------------|
@@ -73,9 +75,9 @@ http请求方式: POS
 
 ### 修改密码
 ---
-/index.php?m=apic=user&a=password
+/index.php?m=api&c=user&a=password
 
-http请求方式: POS
+http请求方式: POST
 
 | 参数        | 是否必填        |  说明 |
 | ------------- |:-------------|:-------------|
@@ -101,9 +103,9 @@ http请求方式: POS
 
 ### 找回密码
 ---
-/index.php?m=apic=user&a=forgetPassword
+/index.php?m=api&c=user&a=forgetPassword
 
-http请求方式: POS
+http请求方式: POST
 
 | 参数        | 是否必填        |  说明 |
 | ------------- |:-------------|:-------------|
@@ -129,9 +131,9 @@ http请求方式: POS
 
 ### 发送注册验证码
 ---
-/index.php?m=apic=user&a=sendMobile
+/index.php?m=api&c=user&a=sendMobile
 
-http请求方式: POS
+http请求方式: POST
 
 | 参数        | 是否必填        |  说明 |
 | ------------- |:-------------|:-------------|
@@ -155,9 +157,9 @@ http请求方式: POS
 
 ### 修改昵称
 ---
-/index.php?m=apic=user&a=updateNickName
+/index.php?m=api&c=user&a=updateNickName
 
-http请求方式: POS
+http请求方式: POST
 
 | 参数        | 是否必填        |  说明 |
 | ------------- |:-------------|:-------------|
@@ -177,3 +179,278 @@ http请求方式: POS
     "action": "error"
 }
 ```
+
+## 作品获取
+
+<a name="category"></a>
+
+### 栏目
+---
+/index.php?m=api&c=book&a=category
+
+http请求方式: GET
+
+| 参数        | 是否必填        |  说明 |
+| ------------- |:-------------|:-------------|
+|token| 是 | 验证token
+
+
+
+```
+{
+    "status": 0,
+    "info": {
+        "1": "作品",
+        "2": "画册",
+        "3": "专栏",
+        "4": "连载"
+    }
+}
+```
+
+
+<a name="book_index"></a>
+
+### 作品列表
+---
+/index.php?m=api&c=book&a=index
+
+http请求方式: GET
+
+| 参数        | 是否必填        |  说明 |
+| ------------- |:-------------|:-------------|
+|token| 是 | 验证token
+|type| 否 | 默认最新作品,  推荐位:position, 评论:comment, 评分:score, 特价:sale
+|catid| 否 | 分类id
+|key| 否 | 搜索值
+|page| 否 | 页码 默认 1
+|size| 否 | 每页数量 默认 10
+
+
+
+```
+{
+    "status": 0,
+    "info": [
+        {
+            "id": "作品id",
+            "title": "标题",
+            "content": "简介",
+            "cose_price": "标价",
+            "sell_price": "销售价",
+            "is_free": "1为免费, 0为收费",
+            "cover": "封面"
+        }
+    ]
+}
+```
+
+
+<a name="show"></a>
+
+### 单篇作品
+---
+/index.php?m=api&c=book&a=show
+
+http请求方式: GET
+
+| 参数        | 是否必填        |  说明 |
+| ------------- |:-------------|:-------------|
+|token| 是 | 验证token
+|id| 是 |  作品id
+
+
+
+```
+{
+    "status": 0,
+    "action": "",
+    "error": "no access",
+    "info": {
+        "metaData": {
+            "id": "",
+            "title": "xxx",
+            "author": "x",
+            "sub_title": "xx",
+            "content": null,
+            "author_content": null,
+            "is_first": "1",
+            "cose_price": "0.00",
+            "sell_price": "0.00",
+            "cover": "",
+            "is_free": "1",
+            "read_num": "0",
+            "collect_num": "0",
+            "press": null,
+            "is_end": "0",
+            "copyright": null,
+            "score_num": "0"
+        },
+        "Toc": [
+            {
+                "id": "4",
+                "book_id": "149",
+                "title": "简介",
+                "sort": "0",
+                "level": 2,
+                "top_id": "0",
+                "up_id": "0",
+                "associateId": 4
+            },
+            {
+                "id": "31",
+                "book_id": "149",
+                "title": "Slim",
+                "sort": "0",
+                "level": 3,
+                "top_id": "4",
+                "up_id": "4",
+                "associateId": 31
+            },
+            {
+                "id": "32",
+                "book_id": "149",
+                "title": "Swoole",
+                "sort": "1",
+                "level": 4,
+                "top_id": "4",
+                "up_id": "31",
+                "associateId": 32
+            },
+            {
+                "id": "1",
+                "book_id": "149",
+                "title": "第一章",
+                "sort": "0",
+                "level": 2,
+                "top_id": "0",
+                "up_id": "0",
+                "associateId": 1
+            }
+        ]
+    }
+}
+```
+
+<a name="book_comment"></a>
+
+### 作品评价
+---
+/index.php?m=api&c=book&a=book_comment
+
+http请求方式: GET
+
+| 参数        | 是否必填        |  说明 |
+| ------------- |:-------------|:-------------|
+|token| 是 | 验证token
+|id| 是 | 作品id
+|page| 否 | 页码 默认 1
+|size| 否 | 每页数量 默认 10
+
+```
+{
+    "status": 0,
+    "action": "",
+    "error": "no access",
+    "info": {
+    "data": [
+        {
+            "id": "20",
+            "book_id": "149",
+            "content": "莫言的成名之作,值得一看!",
+            "pid": "0",
+            "puid": "0",
+            "create_time": "2016-04-03",
+            "update_time": "1459685987",
+            "down_num": "0",
+            "up_num": "1",
+            "score": "3",
+            "reply_num": "1",
+            "nickname": "hacderx1",
+            "header_img": "/u/p/2016-04-14/570f6d465779d.png"
+        }
+    ],
+    "count": "6"
+    }
+}
+```
+
+
+## 作者
+
+<a name="author_index"></a>
+
+### 作者信息
+---
+/index.php?m=api&c=author&a=author_index
+
+http请求方式: GET
+
+| 参数        | 是否必填        |  说明 |
+| ------------- |:-------------|:-------------|
+|token| 是 | 验证token
+|pk| 是 | 登录后返回的pk
+
+
+
+```
+{
+    "status": 0,
+    "info": {
+        "uid": "",
+        "author_name": "",
+        "real_name": "",
+        "desc": ,
+        "mobile": "",
+        "id_no": "",
+        "sign": "",
+        "email": "",
+        "alipay_no": "",
+        "alipay_name": "",
+        "create_time": "",
+        "update_time": "",
+        "status": "1",
+        "remark": null,
+        "is_system": "0"
+    }
+}
+```
+
+<a name="book"></a>
+
+### 作者作品
+---
+/index.php?m=api&c=author&a=book
+
+http请求方式: GET
+
+| 参数        | 是否必填        |  说明 |
+| ------------- |:-------------|:-------------|
+|token| 是 | 验证token
+|pk| 是 | 登录后返回的pk
+|type| 否 | 默认 全部  发布:published 未发布:unpublished
+|page| 否 | 页码 默认 1
+|size| 否 | 每页数量 默认 10
+
+
+```
+{
+    "status": 0,
+    "info": {
+    "data": [
+        {
+            "id": "149",
+            "title": "xxx",
+            "cover_id": "0",
+            "content": null,
+            "status": "1",
+            "sell_price": "0.00",
+            "cover": false
+        }
+    ],
+    "count": "1"
+    }
+}
+```
+
+
