--- a/_layouts/api.html
+++ b/_layouts/api.html
@@ -69,6 +69,21 @@ layout: default
                     {% endfor %}
                 </ul>
             </div>
+            <div class="boxed-group flush" role="navigation">
+                <h3>个人中心</h3>
+                <ul class="boxed-group-inner mini-repo-list">
+                    {% for repo in site.api_member %}
+                    <li class="public source ">
+                        <a href="{{ repo.href }}" title="{{ repo.label }}" class="mini-repo-list-item css-truncate">
+                            <span class="repo-icon octicon octicon-repo"></span>
+                <span class="repo-and-owner css-truncate-target">
+                    {{ repo.label }}
+                </span>
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
         <div class="column three-fourths" >
             <article class="article-content markdown-body">
